<resources>
    <string name="app_name">CommunityBuilding</string>
    <string name="select_your_age_group_below">Select Your Age Group Below</string>

    <string name="adult">Adult</string>
    <string name="teens">Teens</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="request">Request</string>
    <string name="info">Info</string>
    <string name="support_us">Support Us</string>
    <string name="share">Share</string>
    <string name="communitybuild">CommunityBuild</string>
    <string name="todo">TODO</string>
    <string name="community_build">Community Build</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="daily_updates">Daily Updates</string>
    <string name="Notification">Button</string>
    <string name="teen">Teen</string>
    <string name="button">Button</string>
    <string name="adults">Adults</string>
    <string name="senior">Senior</string>


    <string name="select_you_age_group_below">Select you age group below:</string>
    <string name="notification">Notification</string>


    <item name="fragment_container" type="id" />
</resources>