<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
<group android:checkableBehavior="single" >
    <item android:id="@+id/notifications"
        android:icon="@drawable/notifications"
        android:title="@string/notifications">

    </item>

    <item android:id="@+id/help"
        android:icon="@drawable/help"
        android:title="@string/help" />


    <item android:id="@+id/request"
        android:icon="@drawable/request"
        android:title="@string/request" />

    <item android:id="@+id/info"
        android:icon="@drawable/info"
        android:title="@string/info" />



</group>
    <item android:title="@string/support_us"/>
        <item android:id="@+id/share"
            android:icon="@drawable/share"
            android:title="@string/share"/>
</menu>